add blur and speed test

--- a/index.html
+++ b/index.html
@@ -75,12 +75,16 @@
         </div>
         <span class="board-r">分享</span>
       </div>
-      <div class="main-video lpn-mask">
+      <div class="main-bottom">
+        <a href="">©2013保时捷中国 法律公告</a>
+      </div>
+      <div class="video-mask lpn-mask">
         <span class="lpn-ghost"></span>
         <div class="lpn-panel">
           <div class="video-wrap">
             <video></video>
           </div>
+          <div class="video-skip">跳过</div>
         </div>
       </div>
     </section>
