--- a/_demo/getMouseSpeed.html
+++ b/_demo/getMouseSpeed.html
@@ -4,181 +4,79 @@
   <meta charset="utf-8"/>
   <title> pencil to the world </title>
   <script type="text/javascript"
-    src="../../lib/sea/sea-debug.js"
+    src="../lib/sea/sea-debug.js"
     data-config="../../app/config"
     ></script>
+    <style type="text/css">
+        body{
+            background: black;
+        }
+         @-webkit-keyframes shake {
+            0% {
+                margin-left: 0px;
+                opacity: 1;
+            }
+            25%{
+                margin-left: -100px;
+                opacity: 0.5;
+            }
+            75%{
+                margin-left: 100px;
+                opacity: 0.5;
+            }
+            100%{
+                margin-left: 0px;
+            }
+        }
+        .mouse-show{
+            -webkit-animation-name: shake;
+        -webkit-animation-duration: 0.4s;
+ -webkit-animation-iteration-count: 1;
+ -webkit-animation-timing-function: linear;
+        }
+    </style>
  </head>
  <body>
     <div id="sp" style="background:red;">
         1
     </div>
+    <span id="blur">3</span>
+    <img class="mouse-show" src="../images/mouse-show.png" alt="" />
  <script type="text/javascript">
-    var pos = null;
-    var posDur = [ 0 , 0 ];
-    var sp = document.getElementById('sp');
-    document.addEventListener('mousemove' , function( ev ){
-        //pos = [ ev.pageX , ev.pageY ];
-
-        if( !pos ){
-            pos = [ ev.pageX , ev.pageY ];
-            return;
-        }
-        var t = new Date();
-        posDur[0] += Math.abs( ev.pageX - pos[0] );
-        posDur[1] += Math.abs( ev.pageY - pos[1] );
-        pos = [ ev.pageX , ev.pageY ];
-
-    } , false);
-
-    var lastDur = posDur.concat([]);
-    var speeds = 0;
-    var dur = 50;
-    var times = 0;
-    var collectTimes = 10;
-    setInterval(function(){
-        times++;
-        var spx = ( posDur[0] - lastDur[0] );
-        var spy = ( posDur[1] - lastDur[1] );
-        var speed = Math.round( Math.sqrt(spx * spx + spy * spy) ) / dur * 4;
-
-        speeds += speed;
-        if( times % collectTimes == 0 ){
-            sp.style.width = Math.min( speeds / collectTimes , 100 ) + "%";
-            speedCar( speeds / collectTimes / 100 );
-            speeds = 0;
-        }
-
-        lastDur = posDur.concat([]);
-    } , dur);
-
-    var carStatus = {
-        speed: 0,
-        time : 2000,
-        animate: null
-    }
-    var MAX_SPEED = 400;
-    function speedCar( mouseSpeed ){
-        //new Animate();
-        if( carStatus.animate ){
-            carStatus.animate.duration =  mouseSpeed * MAX_SPEED > carStatus.speed ? carStatus.time : 2 * carStatus.time;
-            carStatus.animate.turnTo( [ mouseSpeed * MAX_SPEED ] );
-        } else {
-            carStatus.animate = new Animate( [0] , [ mouseSpeed * MAX_SPEED ] , carStatus.time , '' , function(arr){
-                carStatus.speed = ~~arr[0];
-                sp.innerHTML = carStatus.speed;
-            });
-        }
-    }
-
-
-    /*
-     * Animate Class
-     * {@param originNumArr} 需要变化的初始化数据
-     * {@param targetNumArr} 数据的最终值
-     * {@param speed} 动画持续时间
-     * {@param easing} 动画特效
-     * {@param step} 动画每一步需要执行的了函数，主要用于更新元素的样式值，其第一个参数是个数组，数组里为数据变化的当前值
-     * {@param callback} 动画结束时的回调函数
-     */
-    var Animate = function(originNumArr,targetNumArr,speed,easing,step,callback){
-        this.queue = [];
-        this.duration = speed;
-        this.easing = easing;
-        this.step = step;
-        this.callback = callback;
-        for (var i = 0; i < originNumArr.length; i++){
-            this.queue.push(new Animate.fx(originNumArr[i],targetNumArr[i]));
-        }
-        // begin animation
-        this.begin();
-    }
-
-    Animate.prototype = {
-        begin: function(){
-            if(this._t) return ;
-            var that = this;
-            this.startTime = +new Date();
-            // loop
-            this._t = setInterval(function(){
-                var dur = +new Date() - that.startTime;
-                var queue = that.queue;
-                if(dur > that.duration){
-                    that.end();
-                    // end Animate
-                    return;
-                }
-                var easing = Animate.easing[that.easing] || Animate.easing.linear,
-                    currValues = [];
-                for (var i = 0,len = queue.length; i < len; i++){
-                    currValues.push(queue[i].update(dur,that.duration,easing));
-                }
-                // run step to update
-                that.step(currValues);
-            },13);
-        },
-        // go to end of the animation
-        end: function(){
-            clearInterval(this._t);
-            var queue = this.queue,
-                currValues = [];
-            for (var i = 0,len = queue.length; i < len; i++){
-                currValues.push(queue[i].target);
+    seajs.use(['../../app/game.js' , 'jquery'] , function( game , jquery ){
+        var r = game;
+        r.start({
+            callback: function( speed ){
+                document.getElementById('sp').innerHTML = speed;
             }
-            this.step(currValues);
-            // call callback function
-            this.callback && this.callback();
-        },
-        turnTo: function( targetNumArr ){
-            clearInterval(this._t);
-            var that = this;
-            // reset queue
-            this.startTime = + new Date();
-            for (var i = 0,len = that.queue.length; i < len; i++){
-                that.queue[i] = new Animate.fx(that.queue[i].current,targetNumArr[i]);
-            }
-            // reset interval
-            this._t = setInterval(function(){
-                var dur = +new Date() - that.startTime;
-                var queue = that.queue;
-                if(dur > that.duration){
-                    that.end();
-                    // end Animate
-                    return;
-                }
-                var easing = Animate.easing[that.easing] || Animate.easing.linear,
-                    currValues = [];
-                for (var i = 0,len = queue.length; i < len; i++){
-                    currValues.push(queue[i].update(dur,that.duration,easing));
-                }
-                // run step to update
-                that.step(currValues);
-            } , 13);
-        }
-    }
-    //
-    Animate.fx = function(origin,target){
-        this.origin = origin;
-        this.target = target;
-        this.dist = target - origin;
-    }
-    Animate.fx.prototype = {
-        update: function(n,duration,easing){
-            var pos = easing(n/duration, n , 0 ,1 , duration);
-            this.current = this.origin + this.dist * pos;
-            return this.current;
-        }
-    }
-    // easing
-    Animate.easing = {
-        linear: function( p, n, firstNum, diff ) {
-            return firstNum + diff * p;
-        },
-        swing: function( p, n, firstNum, diff ) {
-            return ((-Math.cos(p*Math.PI)/2) + 0.5) * diff + firstNum;
-        }
-    };
+        });
 
+        var $ = jquery;
+        var $blur = $('#blur');
+        var off = $blur.offset();
+        var w = $blur.width();
+        var createBlur = function( leftOrRight){
+            $blur.clone()
+                .css({
+                    position: 'absolute',
+                    left: off.left,
+                    top: off.top
+                })
+                .animate({
+                    left : off.left + ( leftOrRight ? - w : + w ),
+                    opacity: 0
+                })
+                .appendTo( document.body );
+        }
+        for(var i = 0 ; i < 6 ; i ++ ){
+            !(function(i){
+                setTimeout( function(){
+                    createBlur( i % 2 );
+                } , i % 2 * 100 );
+            })(i);
+        }
 
+    });
  </script>
  </body>
 </html>
