combine mouse event and other effect to index.html

--- a/_demo/blur/demo.html
+++ b/_demo/blur/demo.html
@@ -14,7 +14,7 @@
   <img src="../../images/start.png" alt="" />
   <img src="../../images/c5.png" alt="">
  <script type="text/javascript">
- 	seajs.use(['../../_demo/blur/motion-blur','bootstrap'] , function( exports ){
+ 	seajs.use(['../../app/motion-blur','bootstrap'] , function( exports ){
 
 
     var i = 0 , j = 0;
