--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
         </div>
       </div>
     </section>
+    <section id="video-mask" style="display:none;" class="video-mask lpn-mask">
+      <span class="lpn-ghost"></span>
+      <div class="lpn-panel">
+        <div class="video-wrap">
+          <video></video>
+        </div>
+        <div class="video-skip">跳过</div>
+      </div>
+    </section>
     <!--- \\ loading end -->
     <!---// moving start -->
     <section class="main">
@@ -78,13 +87,21 @@
       <div class="main-bottom">
         <a href="">©2013保时捷中国 法律公告</a>
       </div>
-      <div class="video-mask lpn-mask">
-        <span class="lpn-ghost"></span>
-        <div class="lpn-panel">
-          <div class="video-wrap">
-            <video></video>
-          </div>
-          <div class="video-skip">跳过</div>
+      <div class="main-cars">
+        <img src="images/car.png" alt="" />
+        <img style="bottom: -90px;" src="images/car.png" alt="" />
+      </div>
+      <div class="main-metas">
+        <img class="start" id="start-btn" src="images/start.png" alt="" />
+        <div class="counter" id="counter">
+          <img class="c-bg" src="images/ready.png" alt="" />
+          <img class="c-mouse" src="images/mouse-show.png" alt="" />
+
+          <img class="num" src="images/c5.png" alt="" />
+          <img class="num" src="images/c5.png" alt="" />
+          <img class="num" src="images/c5.png" alt="" />
+          <img class="num" src="images/c5.png" alt="" />
+          <img class="num" src="images/c5.png" alt="" />
         </div>
       </div>
     </section>
