--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <img class="main-com-logo" src="images/m-com-logo.png" />
       </div>
       <div class="main-board">
-        <div class="board-l">
-        </div>
+        <div class="board-l">000</div>
         <div class="board-m-t">
           <div class="b-bar">
 
@@ -82,14 +81,14 @@
         <div class="board-m-b">
           <a href="">保时捷911境界</a><a href="">保时捷官网</a>
         </div>
-        <span class="board-r">分享</span>
+        <span class="board-r" id="share-btn">分享</span>
       </div>
       <div class="main-bottom">
         <a href="">©2013保时捷中国 法律公告</a>
       </div>
       <div class="main-cars">
-        <img src="images/car.png" alt="" />
-        <img style="bottom: -90px;" src="images/car.png" alt="" />
+        <div class="car"><img src="images/car.png" alt="" /></div>
+        <div style="bottom: -90px;" class="car"><img src="images/car.png" alt="" /></div>
       </div>
       <div class="main-metas">
         <img class="start" id="start-btn" src="images/start.png" alt="" />
