--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="main">
       <div class="main-bg">
         <span id="fps" style="position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
-        <img src="images/bg.jpg" class="bg css-animate" id="bg" />
+        <img src="images/bg.jpg" class="bg" id="bg" />
         <img src="images/road.jpg" class="road" id="road" />
       </div>
       <div class="main-top">
