--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <img class="main-com-logo" src="images/m-com-logo.png" />
       </div>
       <div class="main-board">
-        <div class="board-l" id="speed-board">000</div>
+        <div class="board-l" id="speed-board"><em class="speed0"></em><em class="speed0"></em><em class="speed0"></em></div>
         <div class="board-time" id="time-board">00:00:0</div>
         <div class="board-m-t">
           <div class="b-bar">
@@ -103,17 +103,28 @@
         <a href="">©2013保时捷中国 法律公告</a>
       </div>
       <div class="main-cars">
-        <div class="car css-animate"><img src="images/car.png" alt="" /></div>
-        <div style="bottom: -90px;" class="car css-animate"><img src="images/car.png" alt="" /></div>
+        <div class="car css-animate">
+          <img src="images/car.png" />
+          <div class="front-wheel"></div>
+          <div class="end-wheel"></div>
+        </div>
+        <div style="bottom: -90px;" class="car css-animate">
+          <img src="images/car.png" />
+          <div class="front-wheel"></div>
+          <div class="end-wheel"></div>
+        </div>
       </div>
       <div class="main-metas">
-        <img class="start" id="start-btn" src="images/start.png" alt="" />
+        <img class="start" id="start-btn" src="images/start.png" />
         <div class="counter" id="counter">
-          <img class="c-bg" src="images/ready.png" alt="" />
-          <img class="c-mouse" src="images/mouse-show.png" alt="" />
-
-          <img class="num" src="images/c5.png" alt="" />
-          <img class="num" src="images/c5.png" alt="" />
+          <img class="c-bg" src="images/ready.png" />
+          <img class="c-mouse" src="images/mouse-show.png" />
+          <img class="num" src="images/c0.png" />
+          <img class="num" src="images/c1.png" />
+          <img class="num" src="images/c2.png" />
+          <img class="num" src="images/c3.png" />
+          <img class="num" src="images/c4.png" />
+          <img class="num" src="images/c5.png" />
         </div>
       </div>
     </section>
