--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
         <div class="board-l" id="speed-board"><em class="speed00"></em><em class="speed10"></em><em class="speed20"></em></div>
         <div class="board-time" id="time-board">00:00:0</div>
         <div class="board-m-t">
-          <div class="b-bar">
-
-          </div>
-          <div class="b-car" id="car-dot"></div>
-          <div class="b-robot" id="robot-dot"></div>
+          <div id="b-bar" class="b-bar0"></div>
+          <img src="images/cardot.png" class="b-car" id="car-dot" />
+          <img src="images/cardot.png" class="b-robot" id="robot-dot" />
         </div>
         <div class="board-m-b">
           <a href="">保时捷911境界</a><a href="">保时捷官网</a>
