--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         <a href="">©2013保时捷中国 法律公告</a>
       </div>
       <div class="main-cars">
-        <div class="car css-animate">
+        <div class="car">
           <img src="images/car.png" />
           <div class="front-wheel"></div>
           <div class="end-wheel"></div>
         </div>
-        <div style="bottom: -90px;" class="car css-animate">
+        <div style="bottom: -90px;" class="car">
           <img src="images/car.png" />
           <div class="front-wheel"></div>
           <div class="end-wheel"></div>
