add mutiply roads

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="main-bg">
         <span id="fps" style="position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
         <img src="images/bg.jpg" class="bg" id="bg" />
-        <img src="images/road.jpg" class="road" id="road" />
+        <div class="road" id="road"></div>
       </div>
       <div class="main-top">
         <img class="main-logo" src="images/m-logo.png" />
