add result panel

--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
         </div>
       </div>
     </section>
-    <section id="video-mask" class="video-mask lpn-mask">
+    <!--login panel-->
+    <section id="login-mask" style="display:none;" class="login-panel lpn-mask">
+      <span class="lpn-ghost"></span>
+      <div class="lpn-panel">
+        <div class="lpn-content">
+          <form class="login-form clearfix">
+            <label style="margin-right: 17px;">用户名<input type="text" id="uname" /><br/>
+              <span>诅输入苛大时代基本面</span>
+            </label>
+            <label>邮箱<input type="text" id="email" /><br/>
+              <span style="margin-left: 10px;">诅输入苛大时代基本面</span>
+            </label>
+            <div style="margin-top:84px;">
+              <div class="btn" style="margin-right: 24px;"><i class="btn-pre"></i><i class="btn-aft">返回</i></div>
+              <div class="btn"><i class="btn-pre"></i><i class="btn-aft">确认</i></div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!--video panel-->
+    <section id="video-mask" style="display:none;" class="video-mask lpn-mask">
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="video-wrap">
@@ -57,18 +78,93 @@
         <div class="video-skip">跳过</div>
       </div>
     </section>
-    <section id="result-mask" style="display:none;" class="result-mask lpn-mask">
+    <!--result panel-->
+    <section id="result-mask" class="result-mask lpn-mask">
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="result">
-          <div class="r-text">
-            本次游戏<br/>
-            时间 00:00:00<br/>
-            共计追逐距离 00000m
-          </div>
-          <div class="r-again"></div>
           <div class="r-share"></div>
           <div class="r-close"></div>
+          <div class="r-time"></div>
+          <div class="r-dis"></div>
+          <div class="r-list">
+            <table>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>name</td>
+                  <td>1:20:19</td>
+                  <td>888888m</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="r-slider">
+            <hr>
+            <hr>
+            <hr>
+          </div>
+          <div class="btn" style="margin-top: 360px;"><i class="btn-pre"></i><i class="btn-aft">再玩一次</i></div>
         </div>
       </div>
     </section>
