--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </section>
     <!--result panel-->
-    <section id="result-mask" class="result-mask lpn-mask">
+    <section id="result-mask" style="display:none;" class="result-mask lpn-mask">
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="result">
@@ -173,7 +173,9 @@
     <section class="main">
       <div class="main-bg">
         <span id="fps" style="position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
-        <img src="images/bg.jpg" class="bg" id="bg" />
+        <img src="images/bg2.jpg" style="display:none;" />
+        <img src="images/bg3.jpg" style="display:none;" />
+        <img src="images/bg1.jpg" class="bg" id="bg" />
         <div class="road" id="road"></div>
       </div>
       <div class="main-top">
