--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="result">
+          <div class="r-time1"><span class="time00"></span><span class="time01"></span></div>
+          <div class="r-time2"><span class="time02"></span><span class="time05"></span></div>
+          <div class="r-time3"><span class="time03"></span><span class="time06"></span></div>
           <div class="r-share"></div>
           <div class="r-close"></div>
           <div class="r-time"></div>
