--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <div class="r-time1"><span class="time00"></span><span class="time01"></span></div>
           <div class="r-time2"><span class="time02"></span><span class="time05"></span></div>
           <div class="r-time3"><span class="time03"></span><span class="time06"></span></div>
+          <div class="r-distance"><span class="distance03"></span><span class="distance16"></span><span class="distance26"></span><span class="distance36"></span><span class="distance46"></span><span class="distance56"></span></div>
           <div class="r-share"></div>
           <div class="r-close"></div>
           <div class="r-time"></div>
