add sence change effec

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
     <section class="main">
       <div class="main-bg">
         <span id="fps" style="position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
+        <img src="images/bg1-2.jpg" style="display:none;" />
+        <img src="images/bg2-3.jpg" style="display:none;" />
+        <img src="images/bg3-1.jpg" style="display:none;" />
         <img src="images/bg2.jpg" style="display:none;" />
         <img src="images/bg3.jpg" style="display:none;" />
         <img src="images/bg1.jpg" class="bg" id="bg" />
