--- a/gallery.html
+++ b/gallery.html
@@ -7,28 +7,11 @@
             data-config="../../app/config"
             data-main="../../app/gallery"></script>
 </head>
+<link href="./css/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+<link href="./css/gallery.css" rel="stylesheet" type="text/css" />
 <style>
     body {background:#000;}
-    #gallery-mask {position:relative;width:1042px;height:474px;margin:0 0 0 300px;}
-    #gallery-mask .title {background:url(images/gallery_title.png) no-repeat;width:168px;height:28px;margin:0 0 0 50px;}
-    #gallery-mask .close {cursor:pointer;opacity:0.7;background:url(images/gallery_close.png) no-repeat;width:62px;height:37px; position: absolute;bottom:0;right:6px;}
-    #gallery-mask .close:hover {opacity:1;}
-    #gallery-mask .gallery {position: relative;margin:10px 0 0;}
-    .photo {position: absolute; -webkit-backface-visibility: hidden;-webkit-transform: skew(-20deg,0);transform: skew(-20deg,0);float:left;width:357px;height:216px;overflow:hidden;margin:0 0 0 5px;cursor:pointer;}
-    .photo img {-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;display: block;width:455px;height:216px;-webkit-transform: skew(20deg,0);transform: skew(20deg,0);margin:0 0 0 -55px;display:block;}
-    .photo:hover {-webkit-transform: skew(0,0);transform: skew(0,0);overflow:visible;z-index:9999;}
-    .photo:hover img {-webkit-transform: skew(0,0);transform: skew(0,0); border:3px solid #fff;}
-    .photo img,.photo {
-        -webkit-transition:   all 0.3s ease;
-    }
 
-    #gallery-mask .close {
-        -webkit-transition:   all 0.3s ease;
-        -moz-transition:  all 0.3s ease;
-        -o-transition:  all 0.3s ease;
-        -ms-transition:  all 0.3s ease;
-        transition:  all 0.3s ease;
-    }
 </style>
 <body>
 
@@ -36,26 +19,25 @@
     <div class="title"></div>
     <div class="gallery">
         <div class="photo">
-            <img src="pic/s1.jpg" />
+            <a rel="gallery" href="pic/b1.jpg"><img src="pic/s1.jpg" /></a>
         </div>
         <div class="photo">
-            <img src="pic/s2.jpg" />
+            <a rel="gallery" href="pic/b2.jpg"><img src="pic/s2.jpg" /></a>
         </div>
         <div class="photo">
-            <img src="pic/s3.jpg" />
+            <a rel="gallery" href="pic/b3.jpg"><img src="pic/s3.jpg" /></a>
         </div>
         <div class="photo">
-            <img src="pic/s4.jpg" />
+            <a rel="gallery" href="pic/b4.jpg"><img src="pic/s4.jpg" /></a>
         </div>
         <div class="photo">
-            <img src="pic/s5.jpg" />
+            <a rel="gallery" href="pic/b5.jpg"><img src="pic/s5.jpg" /></a>
         </div>
         <div class="photo">
-            <img src="pic/s6.jpg" />
+            <a rel="gallery" href="pic/b6.jpg"><img src="pic/s6.jpg" /></a>
         </div>
     </div>
     <div class="close"></div>
 </div>
-
 </body>
 </html>
