add result panel fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="lpn-content">
-          <img style="margin-top:30px;" src="images/com-logo.png" />
+          <img style="margin-top:30px;" src="images/com-logo.png" width="609" height="21" />
           <div class="process-wrap">
             <div id="process-bar"></div>
           </div>
@@ -83,14 +83,12 @@
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="result">
-          <div class="r-time1"><span class="time00"></span><span class="time01"></span></div>
-          <div class="r-time2"><span class="time02"></span><span class="time05"></span></div>
-          <div class="r-time3"><span class="time03"></span><span class="time06"></span></div>
+          <div class="r-time1"><span class="time00"></span><span class="time00"></span></div>
+          <div class="r-time2"><span class="time00"></span><span class="time00"></span></div>
+          <div class="r-time3"><span class="time00"></span><span class="time00"></span></div>
           <div class="r-distance"><span class="distance03"></span><span class="distance16"></span><span class="distance26"></span><span class="distance36"></span><span class="distance46"></span><span class="distance56"></span></div>
           <div class="r-share"></div>
           <div class="r-close"></div>
-          <div class="r-time"></div>
-          <div class="r-dis"></div>
           <div class="r-list">
             <table>
               <tbody>
