add result panel fixed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!--video panel-->
-    <section id="video-mask" style="display:none;" class="video-mask lpn-mask">
+    <section id="video-mask" class="video-mask lpn-mask">
       <span class="lpn-ghost"></span>
       <div class="lpn-panel">
         <div class="video-wrap">
