--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <![endif]-->
 
   <link href="./css/base.css" rel="stylesheet" type="text/css" />
+     <link href="./css/animate.css" rel="stylesheet" type="text/css" />
   <!--[if IE]>
   <link href="./css/ie.css" rel="stylesheet" type="text/css" />
   <![endif]-->
@@ -174,7 +175,7 @@
     <!---// moving start -->
     <section class="main">
       <div class="main-bg">
-        <span id="fps" style="position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
+        <span id="fps" style="display:none;position:absolute;top:0;left:0;color:yellow;z-index:9999999999;">fps: 0</span>
         <img src="images/bg1-2.jpg" style="display:none;" />
         <img src="images/bg2-3.jpg" style="display:none;" />
         <img src="images/bg3-1.jpg" style="display:none;" />
