--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="video-wrap">
           <video></video>
         </div>
-        <div class="video-skip">跳过</div>
+        <div class="video-skip"></div>
       </div>
     </section>
     <!--result panel-->
