--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!---\\ moving end -->
     <!--load jquery and plugin-->
     <script type="text/javascript" src="./lib/jquery/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="./lib/jquery-plugin/easing/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="./src/jquery-plugin/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="./src/jquery-plugin/jquery.queryloader2.js"></script>
     <script>
     // query loading
@@ -195,11 +195,28 @@
                 });
             $('.main').delay(1300).animate({'opacity':1},1000,'easeOutQuart',function(){
                 // TODO.......
-                //initVideoPlay();
-                //initAnimation();
+                initVideoPlay();
+                initAnimation();
             });
         }
     });
+
+    var $videoPanel = $('#video-mask');
+    var initVideoPlay = function(){
+        // TODO... start to play video
+
+    }
+    var initAnimation = function(){
+        $('.main-com-logo').css({display:'block', opacity:0}).delay(100).animate({opacity:1},800,'easeOutQuart');
+        $('.main-logo').delay(900).animate({left:0},400,'easeOutQuart');
+        $videoPanel.delay(900).fadeIn(400);
+        $videoPanel.find('.video-wrap').delay(1300).animate({height:460},400,'easeOutQuart');
+        $videoPanel.find('.video-skip').css({display:'block',opacity:0}).delay(1700).animate({'opacity':0.7}).hover(function(){
+            $(this).animate({'opacity':1});
+        },function(){
+            $(this).animate({'opacity':.7});
+        });
+    }
     </script>
  </body>
 </html>
