change queryloader back

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <img src="images/cardot.png" class="b-robot" id="robot-dot" />
           </div>
           <div class="board-m-b">
-            <a href="">保时捷911境界</a><a href="">保时捷官网</a><a href="">排行榜</a>
+            <a href="" id="gallery">保时捷911境界</a><a href="">保时捷官网</a><a href="">排行榜</a>
           </div>
           <span class="board-r" id="share-btn">分享</span>
           <div class="board-share" id="share-con">
