--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
 </style>
 <body>
 
-<div id="gallery-mask">
+<div id="gallery-wrap">
     <div class="title"></div>
     <div class="gallery">
         <div class="photo">
