--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         </div>
       </div>
     </section>
+    <input type="hidden" name="username" id="username" />
     <!---\\ moving end -->
     <!--load jquery and plugin-->
     <script type="text/javascript" src="./lib/jquery/jquery-1.8.3.min.js"></script>
