--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <script type="text/javascript" src="./src/jquery-plugin/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="./src/jquery-plugin/jquery.queryloader2.js"></script>
     <script type="text/javascript" src="./src/swfobject/swfobject.js"></script>
-    <script>
+    <script type="text/javascript">
     // query loading
     var $probar = $('#process-bar');
     var $pronum = $('#process-num');
