--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <div class="lpn-panel">
         <div class="lpn-content">
           <form class="login-form clearfix" action="###">
-            <label class="username"><input name="name" type="text" id="uname" />
+            <label class="username"><input name="name" spellcheck="false" type="text" id="uname" />
             </label>
-            <label class="email"><input name="email" type="text" id="email" />
+            <label class="email"><input name="email" spellcheck="false" type="text" id="email" />
             </label>
             <div style="margin-top:64px;">
                 <input type="submit" value=" " class="btn btn-ok" />
