--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title> 2013保时捷极至体验 </title>
+  <meta name="viewport" content="width=1400, minimum-scale=1.0, maximum-scale=1.0" />
   <script type="text/javascript"
     src="./lib/sea/sea-debug.js"
     data-config="../../app/config"
@@ -101,7 +102,6 @@
           </div>
           <div class="r-close"></div>
           <div class="r-list">
-              <table></table>
           </div>
           <div class="r-slider">
             <hr>
@@ -193,8 +193,8 @@
           <div class="front-wheel"></div>
           <div class="end-wheel"></div>
         </div>
-        <div style="bottom: -90px;" class="car">
-          <img src="images/car.png" />
+        <div class="car">
+          <img src="images/robot.png" />
           <div class="front-wheel"></div>
           <div class="end-wheel"></div>
         </div>
