--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         </div>
       </div>
     </section>
+    <div class="icon-pause"></div>
     <!--- \\ loading end -->
     <!---// moving start -->
     <section class="main">
