--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <input type="hidden" name="username" id="username" />
     <!---\\ moving end -->
     <!--load jquery and plugin-->
-    <script type="text/javascript" src="./lib/jquery/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery/jquery-1.10.js"></script>
     <script type="text/javascript" src="./src/jquery-plugin/easing/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="./src/jquery-plugin/jquery.queryloader2.js"></script>
     <script type="text/javascript" src="./src/swfobject/swfobject.js"></script>
