--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       </div>
     </section>
     <div class="icon-pause"></div>
+    <div class="bg-pause"></div>
     <!--- \\ loading end -->
     <!---// moving start -->
     <section class="main">
@@ -171,7 +172,7 @@
             <img src="images/cardot.png" class="b-robot" id="robot-dot" />
           </div>
           <div class="board-m-b">
-            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a href="javascript:void(0);">保时捷官网</a><a href="javascript:void(0);">排行榜</a>
+            <a href="javascript:void(0);" id="gallery">保时捷911境界</a><a id="official-site" href="javascript:void(0);">保时捷官网</a><a id="ranking" href="javascript:void(0);">排行榜</a>
           </div>
           <span class="board-r" id="share-btn">分享</span>
           <div class="board-share" id="share-con">
