--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       </div>
       <div class="main-metas">
         <img class="start" id="start-btn" src="images/start.png" />
+        <img src="images/goon.png" id="goon-btn" class="goon" />
         <div class="counter" id="counter">
           <img class="c-bg" src="images/ready.png" />
           <img class="c-mouse" src="images/mouse-show.png" />
@@ -305,6 +306,8 @@
     var playfinished = function(){
       $('.video-skip').click();
     }
+
+
     </script>
  </body>
 </html>
