--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
       <div class="main-metas">
         <img class="start" id="start-btn" src="images/start.png" />
-        <img src="images/goon.png" id="goon-btn" class="goon" />
+        <!--<img src="images/goon.png" id="goon-btn" class="goon" />-->
         <div class="counter" id="counter">
           <img class="c-bg" src="images/ready.png" />
           <img class="c-mouse" src="images/mouse-show.png" />
