--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8"/>
-  <title> 911 50周年 </title>
+  <title>911 50周年</title>
   <meta name="viewport" content="width=1400, minimum-scale=1.0, maximum-scale=1.0" />
   <title> 2013保时捷极至体验 </title>
   <meta name="viewport" content="width=1024, minimum-scale=1.0, maximum-scale=1.0" />
@@ -85,6 +85,23 @@
         <div class="video-skip"></div>
       </div>
     </section>
+    <!-- ranking panel -->
+    <section id="ranking-mask" style="display:none;" class="ranking-mask lpn-mask">
+        <span class="lpn-ghost"></span>
+        <div class="lpn-panel">
+            <div class="ranking">
+                <div class="r-close"></div>
+                <div class="r-list">
+                </div>
+                <div class="r-slider">
+                    <hr>
+                    <hr>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--result panel-->
     <section id="result-mask" style="display:none;" class="result-mask lpn-mask">
       <span class="lpn-ghost"></span>
